--- a/demo2_data_interaction/pom.xml
+++ b/demo2_data_interaction/pom.xml
@@ -48,6 +48,12 @@
       <version>2.2</version>
       <scope>provided</scope>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
+    <dependency>
+      <groupId>com.fasterxml.jackson.core</groupId>
+      <artifactId>jackson-databind</artifactId>
+      <version>2.13.1</version>
+    </dependency>
   </dependencies>
 
   <build>
